fix: input overflow v4.4.3

--- a/src/components/ProductManager.css
+++ b/src/components/ProductManager.css
@@ -17,6 +17,7 @@
 .form-input,
 .form-textarea,
 .form-select {
+    box-sizing: border-box !important;
     width: 100%;
     height: 55px;
     /* Standardized height */
